--- a/im.html
+++ b/im.html
@@ -7,10 +7,8 @@
 </head>
 <body>
     <h1>어서오세요~</h1>
-<<<<<<< HEAD
     <p>저메추 해주세요!!</p>
-=======
     <p>예~ 제가 왔습니다~ 나으리~~</p>
->>>>>>> 93c54d965f28253f20747dde66ee859cb65d939f
+    <p>소인이 추천하는 저녁 메뉴는, 닭가슴살 비빔밥입니다 흐흐흐</p>
 </body>
 </html>
