--- a/im.html
+++ b/im.html
@@ -10,5 +10,6 @@
     <p>저메추 해주세요!!</p>
     <p>예~ 제가 왔습니다~ 나으리~~</p>
     <p>이게 안되는데 스트레스 받네요</p>
+    <p>스트레스를 받을때 베스킨라빈스에서 초코렛맛을 드세요</p>
 </body>
 </html>
